                       User-Visible WebAuth Changes

WebAuth 3.7.2 (unreleased)

    Add portability code for old MIT Kerberos and Heimdal libraries
    without krb5_get_init_creds_opt_free.

    Fix build problems with with Perl module (only built when the WebKDC
    is enabled) on platforms where all shared libraries need to be linked
    with explicitly.

WebAuth 3.7.1 (2010-07-23)

    Add new WebLogin configuration parameter $EXPIRING_PW_RESEND_PASSWORD.
    If set, a user who is changing their password due to either an expired
    password or by following the prompt to change a password that's
    expiring soon is required to re-enter their current password on the
    same screen as the new password, even if they had just authenticated
    with the old password.  This may be required by site security policy
    and is enabled by default.

    Improve error reporting in WebLogin when password change fails.

    Make mod_webkdc behavior match the documentation by changing the
    default WebKdcProxyTokenLifetime to be the lifetime of the underlying
    Kerberos credential.  Previously, the default was ten hours.

    When probing for Apache module build flags, call apr-config --includes
    and add it to the preprocessor flags.  Fixes build failures on Red Hat
    Enterprise Linux 4 and 5.

WebAuth 3.7.0 (2010-07-08)

    The WebAuthLdapAuthRule directive in mod_webauthldap has been fixed to
    do something closer to its documentation.  Previously, it was
    documented as containing "group <privgroup>" if the user was
    authorized by a privgroup directive, but actually contained only the
    privgroup.  Now, it contains "privgroup <privgroup>" if the user was
    authorized by a privgroup directive.  Patch from Ian Ward Comfort.

    mod_webauthldap supports a new WebAuthLdapPrivgroup directive that
    names a list of privgroups against which the authenticated user's
    membership should be checked.  All privgroups listed of which the user